# RWoMV_impl

./: .gitignore  CMakeLists.txt  README  consts.h  impl.cpp  impl.h  main.cpp
test_scenes/cornell_box/: genvid.sh
test_scenes/noise_free_cbox/: genvid.sh  scene_gen.ipynb
test_scenes/noise_free_cbox/scenes/: cbox_one_ball.xml
test_scenes/noise_free_cbox_hires/: scene_gen.ipynb
tests/: CMakeLists.txt  main.cpp
utils/: all_utils.h  mathutil.h
utils/ext/: buffer.h  common.h  image.h  imageutil.cpp  mathutil.cpp  mathutil.h
